--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bem-helpers",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "BEM helper functions for resolving and joining block to elements and modifiers.",
   "keywords": [
     "bem",
@@ -23,7 +23,8 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "lint": "tslint src/**/*.ts",
-    "prepublish": "npm run lint && tsc && ava",
+    "prepublish": "npm run lint && npm test",
+    "pretest": "tsc",
     "test": "ava",
     "watch": "ava --watch"
   },
@@ -31,7 +32,8 @@
     "@types/classnames": "^2.2.3",
     "@types/node": "^8.0.28",
     "classnames": "^2.2.5",
-    "truthy-keys": "^0.1.2"
+    "truthy-keys": "^0.1.2",
+    "truthy-strings-keys": "^0.2.0"
   },
   "devDependencies": {
     "ava": "^0.22.0",
