--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bem-helpers",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "BEM helper functions for resolving and joining blocks to elements, blocks to modifiers and elements to modifiers.",
   "keywords": [
     "bem",
@@ -24,20 +24,24 @@
     ]
   },
   "scripts": {
+    "clean": "rimraf dist bem-helpers-*",
+    "prebuild": "npm run clean && npm run lint",
     "build": "tsc",
+    "prebuild:watch": "npm run prebuild",
     "build:watch": "tsc --watch",
-    "lint": "tslint src/**/*.ts",
-    "prepublish": "npm run lint && npm test",
-    "pretest": "tsc",
+    "lint": "tslint --project tsconfig.test.json",
+    "pretest": "npm run build",
     "test": "ava",
-    "watch": "ava --watch"
+    "watch": "npm test -- --watch",
+    "prepack": "npm test"
   },
   "dependencies": {
-    "truthy-strings-keys": "^0.4.0"
+    "truthy-strings-keys": "^0.4.3"
   },
   "devDependencies": {
-    "ava": "^0.22.0",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.2"
+    "ava": "^0.24.0",
+    "rimraf": "^2.6.2",
+    "tslint": "^5.9.1",
+    "typescript": "^2.6.2"
   }
 }
